Opened 8 years ago
Closed 8 years ago
#4452 closed defect (fixed)
avstring test segfaults on OpenSolaris
Reported by: | Timothy Gu | Owned by: | |
---|---|---|---|
Priority: | normal | Component: | undetermined |
Version: | git-master | Keywords: | crash SIGSEGV |
Cc: | Blocked By: | ||
Blocking: | Reproduced by developer: | yes | |
Analyzed by developer: | no |
Description
See http://fate.ffmpeg.org/log.cgi?time=20150407012644&log=test&slot=x86-opensolaris-gcc3.4
TEST avstring gmake: *** [fate-avstring] Segmentation Fault (core dumped)
It has been unnoticed because of a misdesign in the FATE system, which I will investigate.
Change History (3)
comment:1 by , 8 years ago
Summary: | avstring test segfaults on OpenSolaris with GCC 3.4 → avstring test segfaults on OpenSolaris |
---|
comment:2 by , 8 years ago
Keywords: | crash SIGSEGV added |
---|
comment:3 by , 8 years ago
Reproduced by developer: | set |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
This is also reproducible with SunCC (which carries an additional segfault):
http://fate.ffmpeg.org/log.cgi?time=20150407230724&log=test&slot=x86-opensolaris-suncc5.10